--- a/assets/css/facultyDashboard.css
+++ b/assets/css/facultyDashboard.css
@@ -4,9 +4,22 @@
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link {
     color: black;
-    padding: 10px 44px;
+    /*padding: 10px 60.5px;*/
     font-weight: 600;
     letter-spacing: 1px;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    text-align: center;
+    text-transform: uppercase;
+    color: #3d3d3d;
+    font-weight: 500;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+    border-radius: 2px 2px 0 0;
+    cursor: pointer;
+    width: 100%;
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link:hover {
@@ -30,8 +43,7 @@
     position: relative;
     z-index: 1;
     border: 2px solid #c2c2c2;
-    /* background: linear-gradient(to right, #ddd6f3 0%, #faaca8 100%); */
-    background: transparent;
+    background-color: white;
     overflow: hidden;
     border-radius: 6px;
     color: black;
@@ -43,8 +55,8 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     height: 260px;
-    border: 0.1px solid rgb(221, 220, 220);
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    /*border: 0.1px solid rgb(221, 220, 220);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);*/
 }
 
 .box-wrapper:hover .box-content {
@@ -59,4 +71,29 @@
     position: relative;
     display: block;
     overflow: none;
+}
+.viewSched .timetable-item-subtitle {
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    color: rgb(90, 89, 89);
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.viewSched .timetable-item-subj {
+    letter-spacing: 1px;
+    background: #f4f4f4;
+    width: fit-content;
+    border-radius: 0.5rem;
+    border: 1px solid #d8e3eb;
+    font-size: 0.95rem;
+}
+.viewSched .timetable-item-prof {
+    color: brown;
+    letter-spacing: 1px;
+    background: rgb(255, 178, 147);
+    width: fit-content;
+    height: fit-content;
+    border-radius: 0.5rem;
+    border: 1px solid rgb(237, 119, 73);
+    font-size: 0.95rem;
 }
