--- a/assets/css/student.css
+++ b/assets/css/student.css
@@ -178,6 +178,8 @@ tr {
     font-size: 1.5rem;
     font-weight: 800;
     display: inline;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 /* Avatar */
