--- a/assets/css/sideBarMAIN.css
+++ b/assets/css/sideBarMAIN.css
@@ -112,6 +112,7 @@ element.style {
     background-color: white;
     padding: .5rem 1rem 0 0;
     z-index: var(--z-fixed);
+    overflow-y:auto;
     border-right: 1px solid rgb(232, 226, 226);
     box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.25);
     transition: .5s;
@@ -120,12 +121,12 @@ element.style {
     -webkit-transition: .5s;
 }
 
-.nav {
+.l-navbar .nav {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden
+    overflow-y: auto;
 }
 
 .nav_logo,
@@ -218,6 +219,7 @@ a:hover {
     .l-navbar {
         left: 0;
         padding: 1rem 0.8rem 0 0;
+  
     }
     .side {
         width: calc(var(--nav-width) + 156px);
