--- a/assets/css/student.css
+++ b/assets/css/student.css
@@ -1,7 +1,4 @@
-body {
-    font-family: 'Poppins', sans-serif;
-    font-size: 0.9rem;
-}
+
 /*Student Tab*/
 .StudentTab h3{
     font-size: 1.5rem;
@@ -97,6 +94,7 @@ textarea:focus, input:focus{
 }
 #table-body tbody{
     text-align: center;
+    line-height: 32px;
 }
 
 /* Action Button */
@@ -231,30 +229,3 @@ div#viewStudentTabContent.tab-content{
 }
 
 /* Form */
-.form-label{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.form-control{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.form-control:focus{
-    box-shadow: none;
-    border-color: #800000;
-}
-.form-control::placeholder{ /* Chrome, Firefox, Opera, Safari 10.1+ */
-    font-size: 0.8rem;
-}
-.form-control:-ms-input-placeholder{ /* Internet Explorer 10-11 */
-    font-size: 0.8rem;
-}
-.form-control::-ms-input-placeholder{ /* Microsoft Edge */
-    font-size: 0.8rem;
-}
-input[type=text], input[type=date], input[type=time], textarea{
-    color: black;
-    font-size: 0.8rem;
-}
