--- a/assets/css/faculty.css
+++ b/assets/css/faculty.css
@@ -164,27 +164,26 @@ input[type=text], input[type=date], input[type=time], textarea{
     white-space: nowrap;
 }
 .table-body td{
- max-width: 200px;
- overflow: hidden;
- text-overflow: ellipsis;
- white-space: nowrap;
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 /* Action Button */
 
-.table-body tbody .action-buttons li{
+.table-body tbody .action-buttons ul li{
     list-style-type: none;
     display: inline-block;
 }
-.table-body tbody .action-buttons li button{
+.table-body tbody .action-buttons ul li button{
     color: white;
     background-color:maroon;
     font-size: 0.55rem;
     padding: 3px 5px;
     opacity: 0.93;
-    margin-top: 2.5px;
 }
-.table-body tbody .action-buttons li #status{ 
+.table-body tbody .action-buttons ul li #status{ 
     color: white;
     background-color:maroon;
     font-size: 0.53rem;
@@ -193,10 +192,10 @@ input[type=text], input[type=date], input[type=time], textarea{
     border-radius: 3px;
     cursor: pointer;
 }
-.table-body tbody .action-buttons li button:hover, .table-body tbody .action-buttons li #status:hover{
+.table-body tbody .action-buttons ul li button:hover, .table-body tbody .action-buttons ul li #status:hover{
     opacity: 1;
 }
-.table-body tbody .action-buttons li button:focus{
+.table-body tbody .action-buttons ul li button:focus{
     box-shadow: none;
 }
 
@@ -246,25 +245,35 @@ textarea:focus, input:focus{
 
 /* Professor View Page Avatar */
 
-#viewProfessorAvatar .btn{
-    padding: 3px 13px 3px 3px;
-}
-#viewProfessorAvatar i{
-    color: white;
-    background-color: #800000;
-    font-size: 50px;
-    padding: 15px 18px;
+.profile-pic-div{
+    height: 140px;
+    width: 140px;
     border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid grey;
+}
+
+#facultyPhoto{
+    height: 100%;
+    width: 100%;
+}
+@media only screen and (max-width: 768px){
+    .profile-pic-div{
+        height: 140px;
+        width: 200px;
+    }
+}
+.info, .info1{
+    font-size: 1rem;
 }
 
 /* Professor View Page Details */
 
-#viewProfessorInformation td{
+#viewProfessorInformation p{
     color: black;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    padding: 15px 5px;
+    text-align: start;
+    padding-right: 10px;
 }
 
 /* Professor View Page Tab-Header */
