--- a/assets/css/studentDashboard.css
+++ b/assets/css/studentDashboard.css
@@ -41,10 +41,10 @@ h5.details{
 
 
 /* schedule */
-.nav-tabs .nav-item.show .nav-link,
+.viewSched .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link {
     color: black;
-    /* padding: 10px auto; */
+    padding: 10px auto;
     font-weight: 600;
     letter-spacing: 1px;
     -webkit-box-flex: 1;
@@ -59,10 +59,10 @@ h5.details{
     transition: none;
     border-radius: 2px 2px 0 0;
     cursor: pointer;
-    width: 100%;
+  
 }
 
-.nav-tabs .nav-item.show .nav-link,
+.viewSched .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link:hover {
     color: white;
     background: maroon;
@@ -71,7 +71,7 @@ h5.details{
     opacity: 0.5;
 }
 
-.nav-tabs .nav-item.show .nav-link,
+.viewSched .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
     color: white;
     background: maroon;
