--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -123,6 +123,13 @@ select.form-control{
 
 /* Save and Cancel Button */
 
+#okay{
+    background-color: #800000;
+    border-color: transparent;
+    color: white;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
 #addSectionSave,
 #save{
     background-color: #800000;
@@ -141,7 +148,8 @@ select.form-control{
     font-size: 0.8rem;
 }
 #addSectionSave:hover,
-#save:hover{
+#save:hover,
+#okay:hover{
     background-color: white;
     border-color: #800000;
     color: #800000;
