--- a/assets/css/applicant.css
+++ b/assets/css/applicant.css
@@ -350,22 +350,12 @@ label {
 .modal .head{
     background: #f4f4f4;
     border: #bdbdbd;
-} .modal-title {
+} 
+.modal-title {
     letter-spacing: 1px;
     font-weight: 500;
   
 }
-
-.modal-footer button.btn-primary {
-    background: #a94c4c;
-    border: none;
-    opacity: 0.9;
-}
-
-.modal-footer button.btn-primary:hover {
-    opacity: 1;
-}
-
 
 /* this is needed to make the content scrollable on larger screens */
 
@@ -390,3 +380,45 @@ label {
     border-right: 1px solid rgb(232, 226, 226);
     box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.25);
   }
+
+  
+.modal .line{
+    opacity: 0.3;
+}
+
+.modal .head{
+    background: maroon;
+    border: #bdbdbd;
+    color: white;
+} 
+.modal .btn-default {
+    background: maroon;
+    color: white;
+    font-size: 0.8rem;
+}
+.modal .btn-default:hover {
+    background: rgb(174, 0, 0);
+    border: 1px solid maroon;
+    color: white;
+}
+.modal .btn-secondary{
+    font-size: 0.8rem;
+    background-color: #7c7c7c;
+}
+.modal .btn-secondary:hover{
+    opacity: 1;
+    background: none;
+    border: 1px solid #646464;
+    color: black;
+}
+
+.modal .btn-secondary:focus, .modal .btn-default:focus{
+    outline: none;
+    box-shadow: none;
+}
+
+.modal .form-control:focus{
+    box-shadow: none;
+    outline: maroon;
+    border: 1px solid steelblue
+}
