--- a/assets/css/facultyDashboard.css
+++ b/assets/css/facultyDashboard.css
@@ -1,41 +1,38 @@
-.viewSched ul#viewSchedule {
-    border-bottom: 2px solid black;
+ul.nav-tabs{
+    background: maroon;
+    width: 100%;
+    border-bottom: 2px solid white;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
-.nav-tabs .nav-item.show .nav-link,
+ .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link {
-    color: black;
-    /*padding: 10px 60.5px;*/
-    font-weight: 600;
     letter-spacing: 1px;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
     text-align: center;
     text-transform: uppercase;
     color: #3d3d3d;
-    font-weight: 500;
-    -webkit-transition: none;
-    -o-transition: none;
-    transition: none;
     border-radius: 2px 2px 0 0;
     cursor: pointer;
     width: 100%;
-}
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link:hover {
     color: white;
-    background: maroon;
-    border-color: white;
+}
+ .nav-tabs .nav-item.show .nav-link,
+ .nav-tabs .nav-link:hover {
+    color: black;
+    background: white;
     font-weight: 200;
-    opacity: 0.5;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-    color: white;
-    background: maroon;
-    border-color: white;
+    color: black;
+    background: white;
     font-weight: 200;
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .box-wrapper {
