--- a/assets/css/mainLogin.css
+++ b/assets/css/mainLogin.css
@@ -189,8 +189,8 @@ label {
     font-weight: 600;
     letter-spacing: 5px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.25);
-    background:#f39f21;
-    opacity: 0.85;
+    background:#f0b134;
+   
     color: black;
 }
 
@@ -326,6 +326,9 @@ input[type=password] {
 
 #applicantLogin .notice{
     font-size: 0.9rem;
+    width: 100%;
+    background: rgb(225, 225, 225);
+    border: 1px solid #8f8d8d;
 }
 
 .modal .line{
@@ -336,11 +339,12 @@ input[type=password] {
 }
 
 .modal .head{
-    background: #f4f4f4;
+    background: #eeededcd;
     border: #bdbdbd;
 } 
 .modal .btn-default {
     background: maroon;
+    border: 1px solid maroon;
 }
 .modal .btn-default:hover {
     background: rgb(174, 0, 0);
@@ -361,10 +365,25 @@ input[type=password] {
 .modal .btn-secondary:focus, .modal .btn-default:focus{
     outline: none;
     box-shadow: none;
+    border: 1px solid maroon;
 }
 
 .modal .form-control:focus{
     box-shadow: none;
     outline: maroon;
     border: 1px solid steelblue
+}
+
+
+button.forgot{
+    background: none;
+    border: none;
+    outline: none;
+    color: blue;
+    font-size: 0.9rem;
+    opacity: 0.8;
+}
+
+button.forgot:hover{
+    opacity: 1;
 }
