--- a/assets/css/mainLogin.css
+++ b/assets/css/mainLogin.css
@@ -174,10 +174,6 @@ label {
     font-weight: 300;
 }
 
-.text-left1:hover {
-    text-shadow: 0.2px 0.2px black;
-}
-
 .navbar-light button.navbar-toggler {
     outline: none;
 }
@@ -342,9 +338,15 @@ input[type=password] {
     background: #eeededcd;
     border: #bdbdbd;
 } 
+.modal .headforget{
+    background: maroon;
+    border: #bdbdbd;
+    color: white;
+} 
 .modal .btn-default {
     background: maroon;
     border: 1px solid maroon;
+    font-size: 0.8rem;
 }
 .modal .btn-default:hover {
     background: rgb(174, 0, 0);
@@ -379,11 +381,12 @@ button.forgot{
     background: none;
     border: none;
     outline: none;
-    color: blue;
+    color: #0D6EFD;
     font-size: 0.9rem;
-    opacity: 0.8;
+ 
 }
 
 button.forgot:hover{
-    opacity: 1;
+    color: #0d3dfd;
+    font-weight: 400;
 }
