--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -42,9 +42,18 @@ body{
 }
 .table-body td{
     max-width: 250px;
-   
+    /* overflow: hidden; */
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+@media only screen and (max-width: 1115px){
+    .table-body td{
+        max-width: 250px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 }
 
 /* Form Responsiveness */
